# mermaid-local-editor

./: .gitignore  CHANGELOG.md  LICENSE  README.md  electron-builder.yml  electron.vite.config.ts  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/: dependabot.yml  release-assets.md
.github/workflows/: ci.yml  release.yml
docs/: HANDOFF.md
docs/superpowers/plans/: 2026-06-25-electron-cross-platform.md
docs/superpowers/specs/: 2026-06-25-electron-cross-platform-design.md
electron/: downloads.ts  files.ts  main.ts  menu.ts  path-resolver.ts  preload.ts  protocol.ts  recent.ts  security.ts
scripts/: gen-icon.mjs
src/: document.ts  editor.ts  export.ts  global.d.ts  i18n.ts  main.ts  mermaid-render.ts  samples.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
test/: document.test.ts  export.test.ts  i18n.test.ts  path-resolver.test.ts  recent.test.ts
