[package]
name = "mermaid-local-editor"
version = "0.1.0"
description = "A local, cross-platform Mermaid diagram editor"
authors = ["you"]
edition = "2021"
rust-version = "1.77.2"

# The library that the desktop binary and (later) the mobile targets share.
# Keeping the app logic in lib.rs is what lets `tauri android`/`tauri ios`
# reuse the exact same entry point.
[lib]
name = "mermaid_local_editor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
# this feature is used for production builds or when `devPath` points to the
# filesystem, do not remove it!
custom-protocol = ["tauri/custom-protocol"]
